[package]
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
edition = "2018"
readme = "README.md"
name = "brandfarlig-mkiv"
version = "0.1.0"
build = "build.rs"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
#alloc-cortex-m = "0.3.5"
# panic-itm = "0.4.1"
# panic-semihosting = "0.5.2"

# Uncomment for the device example.
[dependencies.stm32f4]
features = ["stm32f405", "rt"]
version = "0.7.1"

[dependencies.static-dt-rs]
git = "https://github.com/Atmelfan/static-dt-rs.git"

# this lets you use `cargo fix`!
[[bin]]
name = "brandfarlig-mkiv"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
